--- a/breakfast/breakfast.css
+++ b/breakfast/breakfast.css
@@ -1,9 +1,96 @@
-*,
-*::before,
-*::after {
+body {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 /* So what does this do^? This removes all default borders before the page loads. Border box helps with formatting and responsiveness. */
 
-/* Waffles CSS */ 
+/* QUICHE CSS */
 
+/* Header CSS */
+
+.top-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #2f4f4f;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.quiche-nav{
+  color: white;
+  justify-content: space-around;
+  margin-left: 400px;
+}
+
+a{
+  text-decoration: none;
+  color: white;
+  padding: 20px;
+}
+h1{
+  color: white;
+}
+
+/* Hero section */
+
+.quiche-hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 10px;
+  background-color: #e0e0e039;
+}
+
+.quiche-image{
+  width: fit-content;
+  height: fit-content;
+  background-color: #e0e0e039;
+}
+.hero-intro {
+  word-wrap: wrap;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1rem;
+}
+
+/* Review Section */
+
+.reviews-section {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 5px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.quiche-prep-content {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 2rem;
+  gap: 1em;
+  background-color: #f8f8f8;
+  border: 1px solid #e0e0e0e0;
+  border-radius: 8px;
+  padding: 2rem;
+  margin: 1rem;
+}
+
+.quiche-ingredients {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 15px;
+  color: #333;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.quiche-directions-sections {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 400;
+}
