--- a/breakfast/breakfast.css
+++ b/breakfast/breakfast.css
@@ -94,3 +94,9 @@ h1{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 400;
 }
+
+
+
+/* Scrambled Eggs CSS*/
+
+/* Header CSS */
