--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ ALL OF THIS CODE IS FROM CHATGPT. ASKED QUESTION ON 11/19/2024. Wanted to learn 
 .breakfast-recipes-container {
   display: flex;
   gap: 1rem;
-  justify-content: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
   padding: 2rem;
   max-width: 1200px;
@@ -139,7 +139,7 @@ ALL OF THIS CODE IS FROM CHATGPT. ASKED QUESTION ON 11/19/2024. Wanted to learn 
   align-items: center;
   text-align: center;
   padding: 0.8rem;
-  width: 300px;
+  width: 310px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   background-color: #097968;
@@ -161,4 +161,86 @@ a  {
 
 /* Lunch Page CSS */
 
+.lunch-main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.2rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color:  #002e63;
+  color: whitesmoke;
+}
+.lunch-main a {
+  color: whitesmoke;
+  text-decoration: none; /* Removes underline */
+  padding: 10px;
+}
 
+.lunch-recipes-section {
+  display: flexbox;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.lunch-recipes-container {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding: 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: whitesmoke;
+  box-shadow: #e0e0e0;
+}
+.lunch-card {
+  background-color: whitesmoke;
+  padding: 1rem;
+  border-radius: 8px;
+  text-align: center;
+  width: 300px;
+}
+.lunch-recipes-section {
+  display: flexbox;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1.3rem;
+  padding: 0.5rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  background-color: #002e63;
+}
+.lunch-button {
+  padding: 0.5rem;
+  background: #002e63;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.lunch-card-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0.8rem;
+  width: 310px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  background-color: #002e63;
+  
+}
+a  {
+  color: white;
+  text-decoration: none;
+}
+
+.lunch-footer {
+  padding: 1.5rem;
+  background-color: #002e63;
+  color: whitesmoke;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
