--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body{
   margin: 0;
   padding: 0;
 }
+.righteous-regular {
+  font-family: "Righteous", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 .main-header {
   display: flex;
@@ -242,5 +247,89 @@ a  {
   background-color: #002e63;
   color: whitesmoke;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
+/* Dinner Page CSS*/
+
+.dinner-main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.2rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: 	#5218fa;
+  color: whitesmoke;
+}
+.dinner-main a {
+  color: whitesmoke;
+  text-decoration: none; /* Removes underline */
+  padding: 10px;
+}
+
+.dinner-recipes-section {
+  display: flexbox;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.dinner-recipes-container {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding: 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: whitesmoke;
+  box-shadow: #e0e0e0;
+}
+.dinner-card {
+  background-color: whitesmoke;
+  padding: 1rem;
+  border-radius: 8px;
+  text-align: center;
+  width: 320px;
+}
+.dinner-recipes-section {
+  display: flexbox;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1.3rem;
+  padding: 0.5rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  background-color:	#5218fa;
+}
+.dinner-button {
+  padding: 0.5rem;
+  background:	#5218fa;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.dinner-card-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0.8rem;
+  width: 310px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  background-color:	#5218fa;
+  
+}
+a  {
+  color: white;
+  text-decoration: none;
+}
+
+.dinner-footer {
+  padding: 1.5rem;
+  background-color:	#5218fa;
+  color: whitesmoke;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
